--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".InfoActivity">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/coun"
@@ -32,63 +31,69 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/date"
-        android:text="recovered"
         android:layout_marginLeft="40dp"
+        android:layout_marginTop="10dp"
         android:layout_marginRight="2dp"
-        android:textSize="22dp"
-        android:layout_marginTop="10dp"/>
+        android:text="recovered"
+        android:textSize="22dp" />
+
     <TextView
         android:id="@+id/deaths"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/recovered"
-        android:text="deaths"
         android:layout_marginLeft="40dp"
+        android:layout_marginTop="10dp"
         android:layout_marginRight="2dp"
-        android:textSize="22dp"
-        android:layout_marginTop="10dp"/>
+        android:text="deaths"
+        android:textSize="22dp" />
+
     <TextView
         android:id="@+id/confirmed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/deaths"
-        android:text="confirmed"
         android:layout_marginLeft="40dp"
+        android:layout_marginTop="10dp"
         android:layout_marginRight="2dp"
-        android:textSize="22dp"
-        android:layout_marginTop="10dp"/>
+        android:text="confirmed"
+        android:textSize="22dp" />
+
     <TextView
-    android:id="@+id/totalConfirmed"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_below="@+id/confirmed"
-    android:text="active"
-    android:layout_marginLeft="40dp"
-    android:layout_marginRight="2dp"
-    android:textSize="22dp"
-    android:layout_marginTop="10dp"/>
+        android:id="@+id/totalConfirmed"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/confirmed"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="2dp"
+        android:text="active"
+        android:textSize="22dp" />
+
     <TextView
         android:id="@+id/totalDeaths"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/totalConfirmed"
-        android:text="active"
         android:layout_marginLeft="40dp"
+        android:layout_marginTop="10dp"
         android:layout_marginRight="2dp"
-        android:textSize="22dp"
-        android:layout_marginTop="10dp"/>
+        android:text="active"
+        android:textSize="22dp" />
+
     <TextView
         android:id="@+id/totalRecovered"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/totalDeaths"
-        android:text="totalRecovered"
         android:layout_marginStart="40dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="2dp"
-        android:textSize="22sp"
-        android:layout_marginTop="10dp"/>
+        android:text="totalRecovered"
+        android:textSize="22sp" />
 
     <Button
+        android:id="@+id/button"
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_below="@+id/totalRecovered"
@@ -96,8 +101,16 @@
         android:layout_marginTop="48dp"
         android:layout_marginEnd="91dp"
         android:background="@color/lightgray"
-        android:onClick="onCliclickUpdate"
-        android:text="@string/update"
-        />
+        android:text="@string/update" />
+
+    <Button
+        android:id="@+id/back"
+        android:layout_width="80dp"
+        android:layout_height="40dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="170dp"
+
+        android:layout_marginBottom="30dp"
+        android:text="@string/back" />
 
 </RelativeLayout>
