--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -13,7 +11,7 @@
         android:gravity="center"
         android:text="country"
         android:textColor="@color/lightgray"
-        android:textSize="30dp" />
+        android:textSize="30sp" />
 
     <TextView
         android:id="@+id/date"
@@ -24,7 +22,7 @@
         android:layout_marginTop="30dp"
         android:layout_marginRight="30dp"
         android:text="Date:"
-        android:textSize="22dp" />
+        android:textSize="22sp" />
 
     <TextView
         android:id="@+id/recovered"
@@ -35,7 +33,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginRight="2dp"
         android:text="recovered"
-        android:textSize="22dp" />
+        android:textSize="22sp" />
 
     <TextView
         android:id="@+id/deaths"
@@ -46,7 +44,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginRight="2dp"
         android:text="deaths"
-        android:textSize="22dp" />
+        android:textSize="22sp" />
 
     <TextView
         android:id="@+id/confirmed"
@@ -57,7 +55,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginRight="2dp"
         android:text="confirmed"
-        android:textSize="22dp" />
+        android:textSize="22sp" />
 
     <TextView
         android:id="@+id/totalConfirmed"
@@ -68,7 +66,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginRight="2dp"
         android:text="active"
-        android:textSize="22dp" />
+        android:textSize="22sp" />
 
     <TextView
         android:id="@+id/totalDeaths"
@@ -79,7 +77,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginRight="2dp"
         android:text="active"
-        android:textSize="22dp" />
+        android:textSize="22sp" />
 
     <TextView
         android:id="@+id/totalRecovered"
