--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="light_green">#96CD83</color>
     <color name="green_and_white">#DCE9D9</color>
     <color name="green">#8CC787</color>
+    <color name="dark_green">#65A763</color>
 </resources>
